--- a/refs.bib
+++ b/refs.bib
@@ -358,3 +358,75 @@ title = {{The Fakability of Bar-On's Emotional Quotient Inventory Short Form: Ca
 volume = {20},
 year = {2007}
 }
+
+@article{Salovey1990,
+author = {Salovey, Peter and Mayer, JD},
+file = {:home/whn/Documents/Mendeley Desktop/Imagination, cognition and personality/Salovey, Mayer\_1990\_Emotional intelligence.pdf:pdf},
+journal = {Imagination, cognition and personality},
+mendeley-groups = {mag\_dsv},
+title = {{Emotional intelligence}},
+url = {http://baywood.metapress.com/index/duggp24e52wk6cdg.pdf},
+year = {1990}
+}
+
+@article{Petrides2010,
+author = {Petrides, K.V.},
+doi = {10.1111/j.1754-9434.2010.01213.x},
+file = {:home/whn/Documents/Mendeley Desktop/Industrial and Organizational Psychology/Petrides\_2010\_Trait emotional intelligence theory.pdf:pdf},
+issn = {17549426},
+journal = {Industrial and Organizational Psychology},
+month = jun,
+number = {2},
+pages = {136--139},
+title = {{Trait emotional intelligence theory}},
+url = {http://doi.wiley.com/10.1111/j.1754-9434.2010.01213.x http://onlinelibrary.wiley.com/doi/10.1111/j.1754-9434.2010.01213.x/full},
+volume = {3},
+year = {2010}
+}
+
+@article{Warwick2004,
+abstract = {Eighty-four tertiary students completed questionnaires measuring emotional intelligence (EI), personality, affiliation, abstract reasoning ability, emotional knowledge, and task orientation. Among personality variables, extraversion and agreeableness correlated moderately with total Trait Meta-Mood Scale (TMMS) (p<0.01), and weakly (p<0.05) with openness, conscientiousness and neuroticism. TMMS was also correlated with emotional knowledge (p<0.01) but not with abstract reasoning or interest in affiliation. Results from the same sample with the Mayer, Salovey, Caruso, Emotional Intelligence Test (MSCEIT) revealed inconsistencies between the two EI scales. Thus, openness, extraversion, conscientiousness, neuroticism and interest in affiliation were not significantly related to the MSCEIT, but agreeableness and emotional knowledge (p<0.01) and abstract reasoning ability (p<0.05) were. Results also found that EI as estimated by the TMMS, but not the MSCEIT, was correlated with task orientation (p<0.01); but this effect disappeared when personality was controlled for. Taken as a whole, the differential performance of the TMMS and MSCEIT supports a proposal for two distinct types of EI: trait EI and ability EI (Petrides \& Furnham, 2000).},
+author = {Warwick, Janette and Nettelbeck, Ted},
+doi = {10.1016/j.paid.2003.12.003},
+file = {:home/whn/Documents/Mendeley Desktop/Personality and Individual Differences/Warwick, Nettelbeck\_2004\_Emotional intelligence is\ldots.pdf:pdf},
+issn = {01918869},
+journal = {Personality and Individual Differences},
+keywords = {Ability EI,Emotional intelligence,Trait EI},
+mendeley-groups = {mag\_dsv},
+month = oct,
+number = {5},
+pages = {1091--1100},
+title = {{Emotional intelligence is\ldots?}},
+url = {http://www.sciencedirect.com/science/article/pii/S0191886903004604},
+volume = {37},
+year = {2004}
+}
+
+@article{Petrides2007,
+abstract = {The construct of trait emotional intelligence (trait EI or trait emotional self-efficacy) provides a comprehensive operationalization of emotion-related self-perceptions and dispositions. In the first part of the present study (N=274, 92 males), we performed two joint factor analyses to determine the location of trait EI in Eysenckian and Big Five factor space. The results showed that trait EI is a compound personality construct located at the lower levels of the two taxonomies. In the second part of the study, we performed six two-step hierarchical regressions to investigate the incremental validity of trait EI in predicting, over and above the Giant Three and Big Five personality dimensions, six distinct criteria (life satisfaction, rumination, two adaptive and two maladaptive coping styles). Trait EI incrementally predicted four criteria over the Giant Three and five criteria over the Big Five. The discussion addresses common questions about the operationalization of emotional intelligence as a personality trait.},
+author = {Petrides, K V and Pita, Ria and Kokkinaki, Flora},
+doi = {10.1348/000712606X120618},
+file = {:home/whn/Documents/Mendeley Desktop/British journal of psychology (London, England 1953)/Petrides, Pita, Kokkinaki\_2007\_The location of trait emotional intelligence in personality factor space.pdf:pdf},
+issn = {0007-1269},
+journal = {British journal of psychology (London, England : 1953)},
+keywords = {Adult,Affect,Factor Analysis, Statistical,Female,Humans,Intelligence,Male,Personality,Personality Inventory,Self Efficacy},
+mendeley-groups = {mag\_dsv},
+month = may,
+number = {Pt 2},
+pages = {273--89},
+pmid = {17456273},
+title = {{The location of trait emotional intelligence in personality factor space.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17456273},
+volume = {98},
+year = {2007}
+}
+@article{Cherniss2010,
+author = {Cherniss, Cary},
+file = {:home/whn/Documents/Mendeley Desktop/Industrial and Organizational Psychology/Cherniss\_2010\_Emotional intelligence Toward clarification of a concept.pdf:pdf},
+journal = {Industrial and Organizational Psychology},
+pages = {110--126},
+title = {{Emotional intelligence: Toward clarification of a concept}},
+url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1754-9434.2010.01231.x/full},
+volume = {3},
+year = {2010}
+}
