--- a/refs.bib
+++ b/refs.bib
@@ -430,3 +430,21 @@ url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1754-9434.2010.01231.x/full}
 volume = {3},
 year = {2010}
 }
+
+@article{Rossen2008,
+abstract = {Gignac (2005) and Palmer, Gignac, Manocha, and Stough (2005) recently raised important issues concerning the construct validity of the Mayer–Salovey–Caruso Emotional Intelligence Test Version 2.0 (MSCEIT; Mayer, Salovey, \& Caruso, 2002). This study sought to further examine the constructs measured by the MSCEIT by replicating and extending their research through confirmatory factor analyses (CFA) of the following models: (a) a one-factor model reflecting general emotional intelligence (EI); (b) an oblique two-factor model reflecting the Experiential and Strategic areas; (c) an oblique four-factor model reflecting the four branches or scales of the ability model; (d) an oblique three-factor model reflecting the Perceiving Emotions, Understanding Emotions, and Managing Emotions factors; (e) a general factor model with a nested orthogonal Perceiving Emotions factor and oblique Understanding Emotions and Managing Emotions factors; and (f) a hierarchical model reflecting the MSCEIT’s implied theoretical structure, with oblique first-order factors reflecting the four branches, two oblique second-order factors, and a third-order general EI factor. Results of these analyses replicate those of Gignac (2005) and Palmer et al. (2005), suggesting that the MSCEIT does not measure all the constructs intended by its authors. Further refinement of the test, underlying theory, or both, is needed, with particular emphasis on the Using Emotions factor.},
+author = {Rossen, Eric and Kranzler, John H. and Algina, James},
+doi = {10.1016/j.paid.2007.11.020},
+file = {:home/whn/Documents/Mendeley Desktop/Personality and Individual Differences/Rossen, Kranzler, Algina\_2008\_Confirmatory factor analysis of the Mayer–Salovey–Caruso Emotional Intelligence Test V 2.0 (MSCEIT).pdf:pdf},
+issn = {01918869},
+journal = {Personality and Individual Differences},
+keywords = {CFA,EI,Emotional intelligence,Factor analysis,MSCEIT},
+mendeley-groups = {mag\_dsv},
+month = apr,
+number = {5},
+pages = {1258--1269},
+title = {{Confirmatory factor analysis of the Mayer–Salovey–Caruso Emotional Intelligence Test V 2.0 (MSCEIT)}},
+url = {http://www.sciencedirect.com/science/article/pii/S0191886907004266},
+volume = {44},
+year = {2008}
+}
